--- a/Documentation/sample_garcia/Documentation/SMIC_files/login.html
+++ b/Documentation/sample_garcia/Documentation/SMIC_files/login.html
@@ -22,17 +22,17 @@ SMIC Login
   Home </font></a></button>
   
   <button class="button btn" type="button"> 
- <a id="jobpostings" href="sub_sites/job_postings.html" target="_self">
+ <a id="jobpostings" href="job_postings.html" target="_self">
  <font style ="font-size:20px; font-family: Cambria; ">
  JobPostings</font></a></button>
  
  <button class="button btn" type="button"> 
- <a id="contacts" href="sub_sites/contacts.html" target="_self">
+ <a id="contacts" href="contacts.html" target="_self">
  <font style ="font-size:20px; font-family: Cambria; ">
  Contacts</font></a></button>
  
  <button class="button btn" type="button"> 
- <a id="login" href="sub_sites/login.html" target="_self">
+ <a id="login" href="login.html" target="_self">
  <font style ="font-size:20px; font-family: Cambria; ">
  Log-in</font></a></button>
  </center>
